third_party/move/move-compiler/tests/move_check/parser/duplicate_attributes.exp
warning[W02016]: unknown attribute
  ┌─ tests/move_check/parser/duplicate_attributes.move:2:7
  │
2 │     #[a, a(x = 0)]
  │       ^ Attribute name 'a' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning[W02016]: unknown attribute
  ┌─ tests/move_check/parser/duplicate_attributes.move:2:10
  │
2 │     #[a, a(x = 0)]
  │          ^ Attribute name 'a' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/duplicate_attributes.move:2:10
  │
2 │     #[a, a(x = 0)]
  │       -  ^^^^^^^^ Duplicate attribute 'a' attached to the same item
  │       │   
  │       Attribute previously given here

warning[W02016]: unknown attribute
  ┌─ tests/move_check/parser/duplicate_attributes.move:5:7
  │
5 │     #[b(a, a = 0, a(x = 1))]
  │       ^ Attribute name 'b' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/duplicate_attributes.move:5:12
  │
5 │     #[b(a, a = 0, a(x = 1))]
  │         -  ^^^^^ Duplicate attribute 'a' attached to the same item
  │         │   
  │         Attribute previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/duplicate_attributes.move:5:19
  │
5 │     #[b(a, a = 0, a(x = 1))]
  │         -         ^^^^^^^^ Duplicate attribute 'a' attached to the same item
  │         │          
  │         Attribute previously given here

